--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  font-family: "Avenir Next W00", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .esriRTL label {
@@ -54,7 +55,7 @@ body {
 
 /* ESRI UI COMPONENTS */
 
-.esri-zoom .esri-button {
+.esri-zoom .esri-widget-button {
   width: 26px;
   height: 26px;
   line-height: 26px;
@@ -74,7 +75,7 @@ body {
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
 }
 
-.reverse .esri-zoom .esri-button {
+.reverse .esri-zoom .esri-widget-button {
   background-color: #333333;
   color: #fff;
 }
